# wyzesense2mqtt-rs

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
docs/: implementation_plan.md  oo_design.md  protocol.md  python_project_analysis.md  rust_architecture_design.md  web_interface_design.md
release/: config.docker.yaml  config.yaml.template  entrypoint.sh
src/: lib.rs  main.rs
src/config/: app_config.rs  mod.rs  monitor.rs  sensors.rs  state.rs
src/engine/: mod.rs
src/gateway/: mqtt.rs
src/protocol/: battery.rs  mod.rs  packet.rs  sensor.rs  telemetry.rs
src/transport/: capture.rs  hidraw.rs  mod.rs  replay.rs
src/web/: mod.rs  server.rs
tests/: capture_test.rs  config_test.rs  e2e_test.rs  handshake_test.rs  web_test.rs
tests/captures/: trace_cli.jsonl  trace_hidraw0.jsonl  wyzesense2mqtt.log.2026-05-21.jsonl  wyzesense2mqtt.log.2026-05-22.jsonl  wyzesense2mqtt.log.2026-05-23.jsonl  wyzesense2mqtt.log.2026-05-24.jsonl  wyzesense2mqtt.log.2026-05-25.jsonl  wyzesense2mqtt.log.2026-05-26.jsonl  wyzesense2mqtt.log.2026-05-27.jsonl
tools/: extract_packets.py
